Report added + finalised components
